--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -43,22 +43,49 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tweet " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lum-jk-R00">
-                                            <rect key="frame" x="108" y="37" width="286" height="99"/>
+                                            <rect key="frame" x="108" y="37" width="286" height="49"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZ7-5n-XkN">
+                                            <rect key="frame" x="356" y="96" width="28" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="0y0-nq-Ucv"/>
+                                                <constraint firstAttribute="width" constant="28" id="4w9-sc-9Q5"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="wuK-b7-5Gx" eventType="touchUpInside" id="Tck-eH-2bg"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="koO-3L-teA">
+                                            <rect key="frame" x="317" y="96" width="29" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="29" id="V7l-GV-jlX"/>
+                                                <constraint firstAttribute="height" constant="30" id="YS6-eE-z7V"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="wuK-b7-5Gx" eventType="touchUpInside" id="etx-0i-q5V"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="lum-jk-R00" secondAttribute="bottom" id="86p-N6-MOq"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="TZ7-5n-XkN" secondAttribute="bottom" constant="10" id="3ie-cB-Cig"/>
+                                        <constraint firstItem="TZ7-5n-XkN" firstAttribute="leading" secondItem="koO-3L-teA" secondAttribute="trailing" constant="10" id="6nn-53-0jh"/>
                                         <constraint firstItem="lum-jk-R00" firstAttribute="top" secondItem="8Ir-ty-sjb" secondAttribute="bottom" constant="4" id="B2K-5y-NJL"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="koO-3L-teA" secondAttribute="bottom" constant="10" id="GCX-Qe-FZG"/>
                                         <constraint firstItem="lum-jk-R00" firstAttribute="top" secondItem="8Ir-ty-sjb" secondAttribute="bottom" constant="4" id="Gxe-4f-rYc"/>
+                                        <constraint firstItem="TZ7-5n-XkN" firstAttribute="top" secondItem="lum-jk-R00" secondAttribute="bottom" constant="10" id="SV1-pz-HIM"/>
+                                        <constraint firstItem="TZ7-5n-XkN" firstAttribute="top" secondItem="lum-jk-R00" secondAttribute="bottom" constant="10" id="Sol-uT-3BL"/>
                                         <constraint firstItem="8Ir-ty-sjb" firstAttribute="leading" secondItem="eXJ-zT-DRS" secondAttribute="trailing" constant="8" symbolic="YES" id="XRg-d0-urm"/>
                                         <constraint firstItem="8Ir-ty-sjb" firstAttribute="top" secondItem="Mzi-Nh-qfY" secondAttribute="topMargin" id="dsJ-PU-jmE"/>
                                         <constraint firstItem="eXJ-zT-DRS" firstAttribute="leading" secondItem="Mzi-Nh-qfY" secondAttribute="leadingMargin" id="dw3-lG-p5l"/>
                                         <constraint firstItem="8Ir-ty-sjb" firstAttribute="leading" secondItem="lum-jk-R00" secondAttribute="leading" id="ftY-du-fIr"/>
                                         <constraint firstItem="8Ir-ty-sjb" firstAttribute="top" secondItem="Mzi-Nh-qfY" secondAttribute="topMargin" id="gO8-Be-oQk"/>
                                         <constraint firstItem="8Ir-ty-sjb" firstAttribute="top" secondItem="eXJ-zT-DRS" secondAttribute="top" id="jhQ-B3-WWq"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="TZ7-5n-XkN" secondAttribute="trailing" constant="10" id="k3M-ut-wQe"/>
                                         <constraint firstItem="eXJ-zT-DRS" firstAttribute="top" secondItem="Mzi-Nh-qfY" secondAttribute="topMargin" id="mV3-Fg-wMD"/>
                                         <constraint firstItem="lum-jk-R00" firstAttribute="leading" secondItem="eXJ-zT-DRS" secondAttribute="trailing" constant="8" id="nF5-E0-Hyk"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="8Ir-ty-sjb" secondAttribute="trailing" constant="198" id="vZJ-aX-2L9"/>
@@ -67,7 +94,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favbutton" destination="TZ7-5n-XkN" id="kcv-GR-FrA"/>
                                     <outlet property="profileImageView" destination="eXJ-zT-DRS" id="Dl5-iV-I8p"/>
+                                    <outlet property="retweetButton" destination="koO-3L-teA" id="tGl-av-drh"/>
                                     <outlet property="tweetContent" destination="lum-jk-R00" id="Sqc-pn-HYb"/>
                                     <outlet property="userNameLabel" destination="8Ir-ty-sjb" id="a0j-He-Pf5"/>
                                 </connections>
@@ -86,12 +115,67 @@
                                 <action selector="onLogout:" destination="nKb-TB-RTf" id="xwc-Oq-MOf"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="nnh-qT-HyZ">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="a34-7h-Mqo" kind="presentation" id="lnz-mR-NxJ"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="csh-TJ-dGc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="676.81159420289862" y="0.0"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="mnr-hw-tj7">
+            <objects>
+                <viewController id="2Mv-c0-PhY" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g7G-8U-cBW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dVW-VQ-q4l">
+                                <rect key="frame" x="0.0" y="88" width="414" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="bU6-ra-FoK"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="MXa-Tt-UoV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MXa-Tt-UoV" firstAttribute="trailing" secondItem="dVW-VQ-q4l" secondAttribute="trailing" id="aUP-HH-aaS"/>
+                            <constraint firstItem="dVW-VQ-q4l" firstAttribute="top" secondItem="MXa-Tt-UoV" secondAttribute="top" id="dOX-6D-8Ig"/>
+                            <constraint firstItem="dVW-VQ-q4l" firstAttribute="leading" secondItem="MXa-Tt-UoV" secondAttribute="leading" id="eFo-y6-UWE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ccu-sN-lsf">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" style="plain" id="q2k-T6-M3g">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="2Mv-c0-PhY" id="PnF-EB-RHE"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="hcT-B3-La5">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="2Mv-c0-PhY" id="O48-ch-bJi"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="dVW-VQ-q4l" id="ahh-K7-Rpv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SQS-r2-KYU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2159" y="0.0"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cjB-Rd-mOP">
@@ -155,8 +239,32 @@
             </objects>
             <point key="canvasLocation" x="-914.39999999999998" y="0.44977511244377816"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="0iR-F5-Dt6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="a34-7h-Mqo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="w7A-Ct-8na">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.2494258285" green="0.63246780629999999" blue="0.90591591599999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2Mv-c0-PhY" kind="relationship" relationship="rootViewController" id="fsh-5d-f4i"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HG2-RI-qLc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1387" y="0.0"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
